# remote-apis

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  BUILD.googleapis  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.backup  go.mod  go.sum  go_deps.bzl  remote_apis_deps.bzl  repository_rules.bzl
.bazelci/: presubmit.yml
.bcr/: config.yml  metadata.template.json  presubmit.yml
.github/workflows/: main.yml  publish-to-bcr.yml  release.yml  release_prep.sh
examples/sample_project/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  patches
examples/sample_project/cpp/: BUILD.bazel  example.cpp
examples/sample_project/go/: BUILD.bazel  example.go
examples/sample_project/java/: BUILD.bazel  Example.java
hooks/: pre-commit
internal/: cc_grpc_library.bzl
test/bcr/: .bazelrc  MODULE.bazel
