module(
    name = "bazel_remote_apis",
    version = "",
)

# For compatibility with newer Bazels
# https://github.com/grpc/grpc/commit/ed7916161a405b0e01aa7c39494c7dd536264ea4
bazel_dep(name = "grpc", version = "1.73.1")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "30.0")
bazel_dep(name = "googleapis", version = "0.0.0-20260130-c0fcb356")
# https://github.com/bazel-contrib/rules_foreign_cc/commit/3b0ebe8094f03577166ba0356e9c30ac05f0850a
bazel_dep(name = "rules_foreign_cc", version = "0.13.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0", dev_dependency = True)

go_deps = use_extension(
    "@gazelle//:extensions.bzl",
    "go_deps",
    dev_dependency = True,
)
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_google_cloud_go_longrunning",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
