load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library")

# protobuf proto libraries

cpp_grpc_library(
    name = "status_cpp_grpc",
    protos = ["@com_google_googleapis//google/rpc:status_proto"],
)

# googleapis proto libraries

cpp_grpc_library(
    name = "annotations_cpp_grpc",
    protos = ["@com_google_googleapis//google/api:annotations_proto"],
    deps = [
        ":http_cpp_grpc",
    ],
)

cpp_grpc_library(
    name = "client_cpp_grpc",
    protos = ["@com_google_googleapis//google/api:client_proto"],
)

cpp_grpc_library(
    name = "http_cpp_grpc",
    protos = ["@com_google_googleapis//google/api:http_proto"],
)

cpp_grpc_library(
    name = "operations_cpp_grpc",
    protos = ["@com_google_googleapis//google/longrunning:operations_proto"],
    deps = [
        ":annotations_cpp_grpc",
        ":client_cpp_grpc",
        ":status_cpp_grpc",
    ],
)

# REAPI proto libraries

cpp_grpc_library(
    name = "semver_cpp_grpc",
    protos = ["@remote_execution_apis//build/bazel/semver:semver_proto"],
)

cpp_grpc_library(
    name = "remote_execution_cpp_grpc",
    protos = ["@remote_execution_apis//build/bazel/remote/execution/v2:remote_execution_proto"],
    deps = [
        ":annotations_cpp_grpc",
        ":http_cpp_grpc",
        ":operations_cpp_grpc",
        ":semver_cpp_grpc",
    ],
)

cpp_grpc_library(
    name = "remote_logstream_cpp_grpc",
    protos = ["@remote_execution_apis//build/bazel/remote/logstream/v1:remote_logstream_proto"],
)

cpp_grpc_library(
    name = "remote_asset_cpp_grpc",
    protos = ["@remote_execution_apis//build/bazel/remote/asset/v1:remote_asset_proto"],
    deps = [
        ":remote_execution_cpp_grpc",
        # TODO: It's likely that #includes are being found via the above deps
        # without being listed here explicitly
    ],
)
