load("@rules_go//go:def.bzl", "go_binary", "go_library")

# Gazelle seems to want to add package-level deps that don't exist to this
# go_lib
#
# gazelle:ignore

go_library(
    name = "go_lib",
    srcs = ["example.go"],
    importpath = "github.com/bazelbuild/remote-apis/example/sample_project/go",
    visibility = ["//visibility:private"],
    deps = [
        "@remote_execution_apis//build/bazel/remote/asset/v1:remote_asset_go_grpc",  # keep
        "@remote_execution_apis//build/bazel/remote/execution/v2:remote_execution_go_grpc",  # keep
        "@remote_execution_apis//build/bazel/remote/logstream/v1:remote_logstream_go_grpc",  # keep
    ],
)

go_binary(
    name = "go",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)
