load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_lib",
    srcs = ["example.go"],
    importpath = "github.com/bazelbuild/remote-apis/example/sample_project/go",
    visibility = ["//visibility:private"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/asset/v1:go_default_library",
        "@bazel_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@bazel_remote_apis//build/bazel/remote/logstream/v1:go_default_library",
    ],
)

go_binary(
    name = "example",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)
